--- a/style.css
+++ b/style.css
@@ -1,29 +1,27 @@
-*{
+* {
     font-family: "Rimouski";
 }
 
-body{
+body {
     background-color: #293251;
 }
 
-.container{
-    width: 300px;    
+.container {
+    width: 300px;
     background-color: #FFF;
-    
     display: block;
     margin: 0 auto;
-    
     border-radius: 10px;
-    padding-bottom : 50px;
+    padding-bottom: 50px;
 }
 
-.app-title{
+.app-title {
     width: 300px;
     height: 50px;
     border-radius: 10px 10px 0 0;
 }
 
-.app-title p{
+.app-title p {
     text-align: center;
     padding: 15px;
     margin: 0 auto;
@@ -31,41 +29,41 @@ body{
     color: #293251;
 }
 
-.notification{
+.notification {
     background-color: #f8d7da;
     display: none;
 }
 
-.notification p{
-    color: #721c24;
+.notification p {
+    color: #7a686a;
     font-size: 1.2em;
     margin: 0;
     text-align: center;
     padding: 10px 0;
 }
 
-.weather-container{
+.weather-container {
     width: 300px;
     height: 260px;
     background-color: #F4F9FF;
 }
 
-.weather-icon{
+.weather-icon {
     width: 300px;
     height: 128px;
 }
 
-.weather-icon img{
+.weather-icon img {
     display: block;
     margin: 0 auto;
 }
 
-.temperature-value{
+.temperature-value {
     width: 300px;
-    height:60px;
+    height: 60px;
 }
 
-.temperature-value p{
+.temperature-value p {
     padding: 0;
     margin: 0;
     color: #293251;
@@ -74,20 +72,16 @@ body{
     cursor: pointer;
 }
 
-.temperature-value p:hover{
-    
-}
+.temperature-value p:hover {}
 
-.temperature-value span{
+.temperature-value span {
     color: #293251;
     font-size: 0.5em;
 }
 
-.temperature-description{
-    
-}
+.temperature-description {}
 
-.temperature-description p{
+.temperature-description p {
     padding: 8px;
     margin: 0;
     color: #293251;
@@ -95,17 +89,12 @@ body{
     font-size: 1.2em;
 }
 
-.location{
-    
-}
+.location {}
 
-.location p{
+.location p {
     margin: 0;
     padding: 0;
     color: #293251;
     text-align: center;
     font-size: 0.8em;
 }
-
-
-
