--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
 * {
-    font-family: "Rimouski";
+    margin: 0;
+    padding: 0;
 }
 
 body {
     background-color: #293251;
+    font-size: 10px;
+    font-family: 'Prompt', sans-serif;
 }
 
 .container {
     width: 300px;
+    text-align: center;
     background-color: #FFF;
     display: block;
     margin: 0 auto;
     border-radius: 10px;
+    margin-top: 7em;
     padding-bottom: 50px;
 }
 
@@ -19,6 +24,7 @@ body {
     width: 300px;
     height: 50px;
     border-radius: 10px 10px 0 0;
+    font-size: 1.6em;
 }
 
 .app-title p {
@@ -30,6 +36,7 @@ body {
 }
 
 .notification {
+    font-size: 1.5em;
     background-color: #f8d7da;
     display: none;
 }
@@ -44,7 +51,6 @@ body {
 
 .weather-container {
     width: 300px;
-    height: 260px;
     background-color: #F4F9FF;
 }
 
@@ -60,7 +66,8 @@ body {
 
 .temperature-value {
     width: 300px;
-    height: 60px;
+    font-size: 1.7em;
+    border-radius: 100%;
 }
 
 .temperature-value p {
@@ -72,14 +79,18 @@ body {
     cursor: pointer;
 }
 
-.temperature-value p:hover {}
+.temperature-value p:hover {
+    background-color: #eeeeee;
+}
 
 .temperature-value span {
     color: #293251;
     font-size: 0.5em;
 }
 
-.temperature-description {}
+.temperature-description {
+    font-size: 1.7em;
+}
 
 .temperature-description p {
     padding: 8px;
@@ -89,7 +100,9 @@ body {
     font-size: 1.2em;
 }
 
-.location {}
+.location {
+    font-size: 1.6em;
+}
 
 .location p {
     margin: 0;
